# ds-playground

./: .vscode  Dockerfile  README.md  demo.ipynb  dependencies.r  docker-compose.yml  main.py  main.r  pyproject.toml  python-requirements.txt  r-in-vs-code.r  r-requirements.r  requirements.txt  rmd-in-vs-code.rmd
.devcontainer/: backup devcontainer.json  devcontainer.json  install-vs-code-extensions.sh
.github/workflows/: docker-publish.yml
code-snippets/: seaborn.py
feature-demos/python/: demo.ipynb
feature-demos/r/: main.r
feature-demos/r/src/: sourced-file.r
python/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject copy.toml  pyproject.toml
python-playground/: Dockerfile  Dockerfile from ghcr  README.md  docker-compose.yml  main.py  pyproject.toml
python-playground/.devcontainer/: devcontainer.json  install-vs-code-extensions.sh
python-playground/src/: add_numbers.py
python-playground/tests/: test_add_numbers.py
python/.devcontainer/: devcontainer.json
python/notebooks/: lazypredict.ipynb  quickstart.ipynb
python/scripts/: gacp.sh
r/: Dockerfile  README.md  docker-compose.yml  main.r  requirements.r
r-playground/: Dockerfile  Dockerfile copy  README.md  docker-compose.yml  main.r
r-playground/.devcontainer/: devcontainer.json  install-vs-code-extensions.sh
r-playground/data/: context-aware-intellisense.csv
r-playground/rmd/: rmd-in-vs-code.html  rmd-in-vs-code.rmd
r/.devcontainer/: devcontainer.json
r/demos/: debugging.r  r-markdown.rmd  shiny.r
requirements/: r-requirements.r
tests/: __init__.py
(+105 files in other folders)
