[tool.poetry]
name = "python-ds"
version = "0.1.0"
description = ""
authors = ["D <david.gray.lassiter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
plotly = "^5.14.1"
ipykernel = "^6.23.0"
nbformat = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
