[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipython = "^8.14.0"
ipykernel = "^6.23.3"
seaborn = "^0.12.2"
plotly = "^5.15.0"
nbformat = "^5.9.0"
autoviz = "^0.1.720"

[tool.poetry.group.ml.dependencies]
lazypredict = "^0.2.12"
tensorflow = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
